1、继续整理代码 2、因为core中重命名而有的改动 3、删除showBanner方法